--- a/app/views/layouts/project.html.erb
+++ b/app/views/layouts/project.html.erb
@@ -14,7 +14,7 @@
   <body>
 
   <header>
-    <h1>My timetracking tool</h1>
+    <h1>Enter new entries for your project</h1>
   </header>
 
     <%= yield %>
@@ -24,3 +24,4 @@
       <h3>By Ironhack </h3>
     </footer>
 </html>
+
